# OSPSD-SP24-JOLTEON

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
src/: calculator.cpp  main.cpp
test/: test_calculator.cpp
